--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-top-bar></app-top-bar>
 <div class="container">
-  <app-product-list></app-product-list>
+  <router-outlet></router-outlet>
 </div>
 <app-demo></app-demo>
 
