--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,1 +1,17 @@
-<p>product-list works!</p>
+<div *ngFor="let product of products">
+ 
+    <h3>
+      <a [title]="product.name + ' details'">
+        {{ product.name }}
+      </a>
+    </h3>
+   
+    <p *ngIf="product.description">
+      Description: {{ product.description }}
+    </p>
+   
+    <button (click)="share()">
+      Share
+    </button>
+   
+  </div>
