--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,12 +1,15 @@
-<div class="header">
-    <a [routerLink]="['/']">
-        <h1>My Store</h1>
-    </a>
-    <a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
-    <p>
-        <a [routerLink]="['/demo']">demo</a>  
-    </p>     
-</div>
+
+<ul class="header">
+    <li>
+        <a [routerLink]="['/']">My Store</a>
+    </li>
+    <li>
+        <a [routerLink]="['/cart']">shopping_cart Checkout</a>
+    </li>
+    <li>
+        <a [routerLink]="['/demo']">demo</a>
+    </li>
+</ul>
   <!-- 
   Copyright Google LLC. All Rights Reserved.
   Use of this source code is governed by an MIT-style license that
