--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,13 +1,13 @@
 
 <ul class="header">
     <li>
-        <a [routerLink]="['/']">My Store</a>
+        <a [routerLink]="['/']" routerLinkActive="active">My Store</a>
     </li>
     <li>
-        <a [routerLink]="['/cart']">shopping_cart Checkout</a>
+        <a [routerLink]="['/cart']" routerLinkActive="active">shopping_cart Checkout</a>
     </li>
     <li>
-        <a [routerLink]="['/demo']">demo</a>
+        <a [routerLink]="['/demo']" routerLinkActive="active">demo</a>
     </li>
 </ul>
   <!-- 
