--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -10,6 +10,9 @@
             margin: 10px;
             color: #fff;
         }
+        a.active{
+            color: red;
+        }
     }
     
 }
